@@ -1,4 +1,4 @@
 #!/bin/bash
-mvn install
+mvn package
 cp target/MondoChest*.jar MondoChest.jar
 
