@@ -1,6 +1,6 @@
 name: MondoChest
 main: us.crast.mondochest.MondoChest
-version: 0.7-pre5
+version: 0.7-pre6
 author: Crast
 description: "Sort your items into appropriate chests"
 website: "http://dev.bukkit.org/server-mods/mondochest/"
@@ -48,6 +48,9 @@ permissions:
         default: op
     mondochest.admin.no_master_limit:
         description: "Can make unlimited MondoChests"
+        default: op
+    mondochest.admin.check:
+        description: "Can run the /mondo check command"
         default: op
 
 commands:
